--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.3",
     "next-sanity": "^8.3.2",
     "react": "^18",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18",
     "sanity": "^3.33.0"
   },
